--- a/index.html
+++ b/index.html
@@ -1,70 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mp4Moviez - Download Free Movies</title>
+    <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Filmy-AI | Official</title>
     <style>
-        /* Professional Styles */
-        body { font-family: Tahoma, Geneva, sans-serif; background-color: #f1f1f1; margin: 0; padding: 0; }
-        .header { background: #fff; text-align: center; padding: 10px; border-bottom: 3px solid #e91e63; }
-        .logo { font-size: 24px; font-weight: bold; color: #000; text-decoration: none; }
-        .telegram-btn { background: #0088cc; color: white; padding: 10px; margin: 10px; border-radius: 4px; text-decoration: none; display: block; font-weight: bold; text-align: center; }
-        .cat-box { background: #fff; border: 1px dashed #bbb; margin: 4px; padding: 12px; text-align: center; color: #d32f2f; font-weight: bold; font-size: 14px; }
-        .section-header { background: #e91e63; color: white; padding: 8px; text-align: center; font-weight: bold; }
-        
-        /* Movie List Styles */
-        .movie-item { background: #fff; border-bottom: 1px solid #ddd; padding: 10px; display: flex; }
-        .movie-item img { width: 85px; height: 120px; border: 1px solid #ccc; margin-right: 12px; }
-        .movie-name { color: #0033cc; font-weight: bold; font-size: 15px; text-decoration: none; }
-        .movie-info { color: #ff6600; font-size: 12px; font-weight: bold; margin-top: 4px; }
+        body { font-family: Tahoma; background: #f1f1f1; margin: 0; }
+        .header { background: #fff; text-align: center; padding: 15px; border-bottom: 3px solid #e91e63; }
+        .cat-box { background: #fff; border: 1px dashed #bbb; margin: 5px; padding: 15px; text-align: center; color: #d32f2f; font-weight: bold; cursor: pointer; display: block; text-decoration: none; }
+        .section-header { background: #e91e63; color: white; padding: 10px; text-align: center; font-weight: bold; }
+        .movie-card { background: #fff; border-bottom: 1px solid #ddd; padding: 10px; display: flex; text-decoration: none; color: #000; }
+        .movie-card img { width: 80px; height: 110px; margin-right: 10px; border: 1px solid #ccc; }
     </style>
 </head>
 <body>
+    <div class="header"><h1>Filmy-AI</h1></div>
+    
+    <a href="bollywood.html" class="cat-box">📁 Latest Bollywood Movies (2026)</a>
+    <a href="hollywood.html" class="cat-box">📁 Hollywood Hindi Dubbed (2026)</a>
 
-<div class="header">
-    <a href="#" class="logo">Mp4Moviez.Org</a>
-    <a href="https://t.me/your_channel" class="telegram-btn">Join Us On Telegram</a>
-</div>
+    <div class="section-header">Latest Updates</div>
+    <div id="latest-movies"></div>
 
-<div class="cat-box">Latest Bollywood Movies (2026)</div>
-<div class="cat-box">South Indian Hindi Dubbed (2026)</div>
-
-<div class="section-header">Latest Updates</div>
-
-<div id="movies-list">
-    <p style="text-align:center; padding:20px;">Posters Load Ho Rahe Hain...</p>
-</div>
-
-<div class="section-header">Full Categories</div>
-
-<script>
-    // Ye script aapke robot (update_news.py) ki banayi hui news.json se data uthayegi
-    async function fetchMovies() {
-        try {
-            const response = await fetch('news.json');
-            const data = await response.json();
-            const list = document.getElementById('movies-list');
-            list.innerHTML = '';
-
-            data.news_items.forEach(movie => {
-                list.innerHTML += `
-                    <div class="movie-item">
-                        <img src="${movie.img}" alt="poster">
-                        <div class="movie-details">
-                            <a href="#" class="movie-name">${movie.title} (${movie.year}) Hindi Dubbed HD</a>
-                            <div class="movie-info">Category: Hollywood Hindi Dubbed</div>
-                            <div style="color: #800080; font-size: 12px; font-weight: bold;">Added: [ HD + Mp4 ]</div>
+    <script>
+        async function loadLatest() {
+            const res = await fetch('news.json');
+            const data = await res.json();
+            const container = document.getElementById('latest-movies');
+            data.news_items.slice(0, 10).forEach(movie => {
+                container.innerHTML += `
+                    <a href="download.html?id=${movie.id}" class="movie-card">
+                        <img src="${movie.img}">
+                        <div>
+                            <b style="color:#0033cc">${movie.title}</b><br>
+                            <small style="color:#ff6600">Full Movie [Hindi-Dubbed]</small>
                         </div>
-                    </div>
-                `;
+                    </a>`;
             });
-        } catch (e) {
-            document.getElementById('movies-list').innerHTML = "<p style='text-align:center;'>Pehle GitHub Actions Run Karein!</p>";
         }
-    }
-    fetchMovies();
-</script>
-
+        loadLatest();
+    </script>
 </body>
 </html>
