--- a/download.html
+++ b/download.html
@@ -1,29 +1,20 @@
-<script>
-    const urlParams = new URLSearchParams(window.location.search);
-    const movieId = urlParams.get('id');
+<!DOCTYPE html>
+<html>
+<head>
+    <style>
+        .dl-btn { background: #4CAF50; color: white; padding: 10px; display: block; margin: 10px; text-align: center; text-decoration: none; border-radius: 5px; font-weight: bold; }
+        .quality-box { background: #eee; padding: 10px; border: 1px solid #ccc; margin: 5px; }
+    </style>
+</head>
+<body>
+    <h2 id="m-title" style="text-align:center;">Movie Loading...</h2>
+    <div id="m-img" style="text-align:center;"></div>
 
-    fetch('news.json?v=' + Date.now())
-        .then(r => r.json())
-        .then(data => {
-            // Movie ko ID se dhundna
-            const m = data.news_items.find(x => x.id == movieId);
-            if(m) {
-                document.getElementById('content').innerHTML = `
-                    <h2 style="color:#ffcc00">${m.title}</h2>
-                    <img src="${m.img}" style="width:200px; border:4px solid #ffcc00;">
-                    <div class="info" style="background:#002d4a; padding:15px; margin:20px 0; border-radius:10px; text-align:left;">
-                        <p><b>Quality:</b> 480p, 720p, 1080p (BlueRay)</p>
-                        <p><b>Language:</b> Hindi Dubbed</p>
-                        <p><b>Size:</b> ${m.size_720 || '1.2 GB'}</p>
-                    </div>
-                    <div style="background:#ffcc00; color:black; padding:10px; font-weight:bold; margin-bottom:10px;">DOWNLOAD LINKS BELOW</div>
-                    <a href="https://www.google.com/search?q=${m.title}+320p+download" class="dl-btn" style="background:#555">Download 320p (Low)</a>
-                    <a href="https://www.google.com/search?q=${m.title}+480p+download" class="dl-btn">Download 480p (HD)</a>
-                    <a href="https://www.google.com/search?q=${m.title}+720p+download" class="dl-btn">Download 720p (Full HD)</a>
-                    <a href="https://www.google.com/search?q=${m.title}+1080p+download" class="dl-btn" style="background:red; color:white;">Download 1080p (4K Quality)</a>
-                `;
-            } else {
-                document.getElementById('content').innerHTML = "<h3>Movie Not Found! Go back to Home.</h3>";
-            }
-        });
-</script>
+    <div class="quality-box">
+        <p>Choose Quality:</p>
+        <a href="#" class="dl-btn">Download 480p (400MB)</a>
+        <a href="#" class="dl-btn" style="background:#2196F3">Download 720p (1.2GB)</a>
+        <a href="#" class="dl-btn" style="background:#f44336">Download 1080p (2.5GB)</a>
+    </div>
+</body>
+</html>
